--- a/workboard-server/workboard-server.cabal
+++ b/workboard-server/workboard-server.cabal
@@ -2,40 +2,47 @@ name:                workboard-server
 version:             0.1.0.0
 synopsis:            Initial project template from stack
 description:         Please see README.md
-homepage:            https://github.com/githubuser/workboard-server#readme
+homepage:            https://github.com/ardamose123/collab-workboard
 license:             BSD3
 license-file:        LICENSE
-author:              Author name here
-maintainer:          example@example.com
-copyright:           2016 Author name here
+author:              Ariel David Moya Sequeira
+maintainer:          ardamose123@gmail.com
+copyright:           2016 Ariel David Moya Sequeira
 category:            Web
 build-type:          Simple
 -- extra-source-files:
 cabal-version:       >=1.10
 
 library
-  hs-source-dirs:      src
-  exposed-modules:     System.EventStream.Persistence
-  build-depends:       base >= 4.7 && < 5, stm, atomic-write, bytestring, directory, filepath, transformers, aeson
-  default-language:    Haskell2010
+  hs-source-dirs:       src
+  exposed-modules:      Service.Chat, Service.Chat.StateAggregator
+  build-depends:        base >= 4.7 && < 5
+                      , aeson
+                      , atomic-write
+                      , bytestring
+                      , directory
+                      , filepath
+                      , stm
+                      , transformers
+  default-language:     Haskell2010
 
 executable workboard-server-exe
-  hs-source-dirs:      app
-  main-is:             Main.hs
-  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
-  build-depends:       base
-                     , workboard-server
-  default-language:    Haskell2010
+  hs-source-dirs:       app
+  main-is:              Main.hs
+  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
+  build-depends:        base
+                      , workboard-server
+  default-language:     Haskell2010
 
 test-suite workboard-server-test
-  type:                exitcode-stdio-1.0
-  hs-source-dirs:      test
-  main-is:             Spec.hs
-  build-depends:       base
-                     , workboard-server
-  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
-  default-language:    Haskell2010
+  type:                 exitcode-stdio-1.0
+  hs-source-dirs:       test
+  main-is:              Spec.hs
+  build-depends:        base
+                      , workboard-server
+  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
+  default-language:     Haskell2010
 
 source-repository head
   type:     git
-  location: https://github.com/githubuser/workboard-server
+  location: https://github.com/ardamose123/collab-workboard
