--- a/workboard-server/workboard-server.cabal
+++ b/workboard-server/workboard-server.cabal
@@ -15,7 +15,7 @@ cabal-version:       >=1.10
 
 library
   hs-source-dirs:       src
-  exposed-modules:      Service.Chat, Service.Chat.StateAggregator
+  exposed-modules:      Service.Chat, Service.Chat.StateAggregator, Service.Chat.Server
   build-depends:        base >= 4.7 && < 5
                       , aeson
                       , atomic-write
@@ -24,6 +24,10 @@ library
                       , filepath
                       , stm
                       , transformers
+                      , servant-server
+                      , wai
+                      , wai-extra
+                      , warp
   default-language:     Haskell2010
 
 executable workboard-server-exe
@@ -32,6 +36,10 @@ executable workboard-server-exe
   ghc-options:          -threaded -rtsopts -with-rtsopts=-N
   build-depends:        base
                       , workboard-server
+                      , aeson
+                      , servant-server
+                      , wai
+                      , warp
   default-language:     Haskell2010
 
 test-suite workboard-server-test
