--- a/workboard-server/workboard-server.cabal
+++ b/workboard-server/workboard-server.cabal
@@ -15,22 +15,23 @@ cabal-version:       >=1.10
 
 library
   hs-source-dirs:       src
-  exposed-modules:      Service.Chat, Service.Chat.StateAggregator, Service.Chat.Server
+  exposed-modules:      Service.Chat, Service.Chat.Server
   build-depends:        base >= 4.7 && < 5
                       , aeson
                       , atomic-write
                       , bytestring
                       , directory
                       , filepath
+                      , servant-server
                       , stm
                       , transformers
-                      , servant-server
                       , wai
+                      , wai-cors
                       , wai-extra
                       , warp
   default-language:     Haskell2010
 
-executable workboard-server-exe
+executable workboard-server
   hs-source-dirs:       app
   main-is:              Main.hs
   ghc-options:          -threaded -rtsopts -with-rtsopts=-N
